desde la pagina principal

--- a/src/main/webapp/protegido/principal.xhtml
+++ b/src/main/webapp/protegido/principal.xhtml
@@ -12,5 +12,8 @@ and open the template in the editor.
     </head>
     <body>
         <div>TODO write content</div>
+        
+        <h1>Bienvenido a la pagina principal</h1>
+        
     </body>
 </html>
